Increased spacing before headings (fixes #105)
I've increased the spacing above headings
by 15px, to separate headings from the
previous text.

Currently there is a large amount of space
above level 2 headings, due to an issue in
HTML parsing causing extra paragraph blocks.

--- a/generator/scss/website.scss
+++ b/generator/scss/website.scss
@@ -64,7 +64,7 @@ ul.side-nav.fixed li a {
   color: $primary-color-light !important;
 }
 .section_heading {
-  padding-top: 70px;
+  padding-top: 85px;
   margin-top: -70px;
   pointer-events: none;
   & > a {
